fix: Reversed yaw and pitch in help